--- a/app/views/welcome/login.html.erb
+++ b/app/views/welcome/login.html.erb
@@ -1,2 +1,20 @@
-<h1>Welcome#login</h1>
-<p>Find me in app/views/welcome/login.html.erb</p>
+<h1>Make Your Own Adventure Game</h1>
+
+<p id="description">Game description</p>
+
+<%= form_for :account do |f| %>
+    <p id="username">
+        <%= f.label :username %><br>
+        <%= f.text_field :username %>
+    </p>
+    <p id="password">
+        <%= f.label :password %><br>
+        <%= f.text_field :password %>
+    </p>
+    
+    <p id="submit">
+        <%= f.submit value="Login"%>
+    </p>
+    
+<% end %>
+    
