--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,33 @@
 // Place all the styles related to the Welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body{
+    background-color:black;
+}
+ h1{
+     text-align:center;
+     color: white;
+ }
+ 
+ #description{
+     text-align:center;
+     color: white;
+     font-size: 20px;
+ }
+ 
+ #username{
+     text-align:center;
+     color:white;
+     padding-top: 60px;
+ }
+ 
+ #password{
+     text-align:center;
+     color:white;
+     padding-top: 20px;
+     
+ }
+ 
+ #submit{
+     text-align:center;
+ }
