--- a/app/assets/stylesheets/adventures.scss
+++ b/app/assets/stylesheets/adventures.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the Adventures controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+p{
+    text-align:center;
+    color:white;
+    padding-top: 20px;
+    font-size: 25px;
+     
+}
+#advname{
+    color: white;
+}
