--- a/app/views/adventures/new.html.erb
+++ b/app/views/adventures/new.html.erb
@@ -3,6 +3,20 @@
 <p> Enter a name for your new adventure!</p>
 
 <%= form_with scope: :adventure, url: adventures_path, local: true do |form| %>
+  <% if @adventure.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@adventure.errors.count, "error") %> prohibited
+        this adventure from being saved:
+      </h2>
+      <ul>
+        <% @adventure.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <p>
     <%= form.label :name %><br>
     <%= form.text_field :name %>
