Added edit/update functionality to adventures

--- a/app/views/adventures/index.html.erb
+++ b/app/views/adventures/index.html.erb
@@ -11,6 +11,7 @@
     <tr>
       <td><%= adventure.name %></td>
       <td><%= link_to 'Show', adventure_path(adventure) %></td>
+      <td><%= link_to 'Edit', edit_adventure_path(adventure) %>
     </tr>
   <% end %>
 </table>
