Added edit link to show view

--- a/app/views/adventures/show.html.erb
+++ b/app/views/adventures/show.html.erb
@@ -3,4 +3,6 @@
   <%= @adventure.name %>
 </p>
 
+
+<%= link_to 'Edit Adventure', edit_adventure_path(@adventure) %> |
 <%= link_to 'Back to Saved Adventures', adventures_path %>
