Added styling to table and links

--- a/app/assets/stylesheets/adventures.scss
+++ b/app/assets/stylesheets/adventures.scss
@@ -8,6 +8,24 @@ p{
     font-size: 25px;
      
 }
-#advname{
-    color: white;
+table, th, td {
+    border: 1px solid black;
 }
+
+
+#error_explanation{
+    color: white;
+    text-align: center;
+}
+
+.link-to-text-color{
+    color:white;
+    
+}
+
+
+
+#saved{
+    margin-left: 0px;
+}
+
