--- a/app/views/adventures/show.html.erb
+++ b/app/views/adventures/show.html.erb
@@ -3,4 +3,4 @@
   <%= @adventure.name %>
 </p>
 
-<%= link_to 'Back to Saved Adventures', adventures_path %>
+<%= link_to 'Back to Saved Adventures', adventures_path, class: 'link-to-text-color' %>
