--- a/app/views/adventures/index.html.erb
+++ b/app/views/adventures/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Saved Adventures</h1>
 
-<%= link_to 'New Adventure', new_adventure_path %>
 
-<table id="advname">
+
+<table bgcolor="white" align="center" width="400">
   <tr>
     <th>Name</th>
   </tr>
@@ -14,3 +14,5 @@
     </tr>
   <% end %>
 </table>
+
+<%= link_to 'New Adventure', new_adventure_path, class: 'link-to-text-color'%>
