Add create functionality to Storyline

--- a/app/views/adventures/show.html.erb
+++ b/app/views/adventures/show.html.erb
@@ -12,7 +12,17 @@
   <% end %>
 </p>
 
-
+<p> Choose a storyline for your adventure:</p>
+<%= form_with(model: [ @adventure, @adventure.storylines.build ], local: true) do |form| %>
+  <p>
+    <%= form.label :selection %><br>
+    <%= form.text_field :selection %>
+  </p>
+  
+  <p>
+    <%= form.submit %>
+  </p>
+<% end %>
 
 
 <%= link_to 'Edit Adventure', edit_adventure_path(@adventure) %> |
