Moved bullet over on error page

--- a/app/views/welcome/login.html.erb
+++ b/app/views/welcome/login.html.erb
@@ -20,5 +20,5 @@
 <% end %>
 
 
-<%= link_to 'My Adventures', controller: 'adventures', class: 'link-color' %>
+<%= link_to 'My Adventures', controller: 'adventures' %>
     
