--- a/app/views/adventures/show.html.erb
+++ b/app/views/adventures/show.html.erb
@@ -15,7 +15,7 @@
 
 
 
-<%= link_to 'Edit Adventure', edit_adventure_path(@adventure) %> |
+<%= link_to 'Edit Adventure', edit_adventure_path(@adventure), class: 'link-to-text-color' %> |
 
 <%= link_to 'Back to Saved Adventures', adventures_path, class: 'link-to-text-color' %>
 
