--- a/app/views/adventures/_form.html.erb
+++ b/app/views/adventures/_form.html.erb
@@ -20,9 +20,9 @@
   </p>
   
   <p>Choose a storyline for your adventure</p>
-    <%= form.radio_button :storyline, 'story1' %> 
+    <%= form.radio_button :storyline, 'Storyline 1' %> 
     <%= form.label :storyline, 'Storyline 1', :value => 'story1' %>
-    <%= form.radio_button :storyline, 'story2' %>
+    <%= form.radio_button :storyline, 'Storyline 2' %>
     <%= form.label :storyline, 'Storyline 2', :value => 'story2' %>
   </p>
 
