--- a/app/views/adventures/_form.html.erb
+++ b/app/views/adventures/_form.html.erb
@@ -1,6 +1,6 @@
-<%= form_with model: @adventure, local: true do |form| %>
+<%= form_for @adventure do |form| %>
 
-    <% if @adventure.errors.any? %>
+  <% if @adventure.errors.any? %>
     <div id="error_explanation">
       <h2>
         <%= pluralize(@adventure.errors.count, "error") %> prohibited
@@ -20,8 +20,8 @@
   </p>
   
   <p>Choose a storyline for your adventure</p>
-    <%= form.radio_button :storyline, 'Storyline 1' %> 
-    <%= form.label :storyline, 'Storyline 1', :value => 'story1' %>
+    <p><%= form.radio_button :storyline, 'Storyline 1' %></p>
+    <p><%= form.label :storyline, 'Storyline 1', :value => 'story1' %></p>
     <%= form.radio_button :storyline, 'Storyline 2' %>
     <%= form.label :storyline, 'Storyline 2', :value => 'story2' %>
   </p>
