Add User deletes an adventure feature

--- a/app/views/adventures/_form.html.erb
+++ b/app/views/adventures/_form.html.erb
@@ -20,8 +20,9 @@
   </p>
   
   <p>Choose a storyline for your adventure</p>
-    <p><%= form.radio_button :storyline, 'Storyline 1' %></p>
-    <p><%= form.label :storyline, 'Storyline 1', :value => 'story1' %></p>
+  <p>
+    <%= form.radio_button :storyline, 'Storyline 1' %>
+    <%= form.label :storyline, 'Storyline 1', :value => 'story1' %>
     <%= form.radio_button :storyline, 'Storyline 2' %>
     <%= form.label :storyline, 'Storyline 2', :value => 'story2' %>
   </p>
