--- a/app/views/adventures/_form.html.erb
+++ b/app/views/adventures/_form.html.erb
@@ -22,7 +22,7 @@
   <p>Choose a storyline for your adventure</p>
   <p>
     <%= form.label :storyline, "Storyline 1", :value => 'story1' %>
-    <%= form.radio_button :storyline, 'Storyline 1' %>
+    <%= form.radio_button :storyline, 'Storyline 1', :checked => "checked" %>
     <%= form.label :storyline, 'Storyline 2', :value => 'story2' %>
     <%= form.radio_button :storyline, 'Storyline 2'%>
     
