Change color of storyline 1 and stroyline 2 to white on error page

--- a/app/views/adventures/_form.html.erb
+++ b/app/views/adventures/_form.html.erb
@@ -22,9 +22,9 @@
   <p>Choose a storyline for your adventure</p>
   <p>
     <%= form.radio_button :storyline, 'Storyline 1' %>
-    <%= form.label :storyline, 'Storyline 1', :value => 'story1' %>
+    <%= form.label :storyline, 'Storyline 1', :value => 'story1', :id => 'storyline1' %>
     <%= form.radio_button :storyline, 'Storyline 2' %>
-    <%= form.label :storyline, 'Storyline 2', :value => 'story2' %>
+    <%= form.label :storyline, 'Storyline 2', :value => 'story2', :id => 'storyline2'  %>
   </p>
 
   <p>
