--- a/app/views/adventures/_form.html.erb
+++ b/app/views/adventures/_form.html.erb
@@ -14,10 +14,10 @@
     </div>
   <% end %>
 
-  <p>
+  
     <%= form.label :name %><br>
-    <%= form.text_field :name %>
-  </p>
+    <%= form.text_field :name, :id => 'name' %>
+  
   
   <p>Choose a storyline for your adventure</p>
   <p>
