Add play link to adventures table

--- a/app/views/adventures/show.html.erb
+++ b/app/views/adventures/show.html.erb
@@ -12,12 +12,12 @@
 <!-- need to add increment variable to print next to level -->
 <% @adventure.levels.each do |level| %>
   <p>
-    <strong>Level</strong>
+    <strong>Level: </strong>
     <%= level.level %>
   </p>
  
   <p>
-    <strong>User Choice:</strong>
+    <strong>User Choice: </strong>
     <%= level.user_choice %>
   </p>
   
