--- a/app/views/adventures/index.html.erb
+++ b/app/views/adventures/index.html.erb
@@ -12,6 +12,7 @@
       <td><%= adventure.name %></td>
       <td><%= link_to 'Show', adventure_path(adventure) %></td>
       <td><%= link_to 'Edit', edit_adventure_path(adventure) %></td>
+      <td><%= link_to 'Play', play_adventure_path(adventure) %></td>
       <td><%= link_to 'Delete', adventure_path(adventure), 
               method: :delete,
               data: {confirm: 'Are you sure you want to delete your adventure?' } %></td>
