Added play link to show adventure page

--- a/app/views/adventures/show.html.erb
+++ b/app/views/adventures/show.html.erb
@@ -32,3 +32,5 @@
 
 <%= link_to 'Back to Saved Adventures', adventures_path, class: 'link-to-text-color' %>
 
+<%= link_to 'Play', play_adventure_path(@adventure), class: 'link-to-text-color'  %>
+
