Added description and name to game

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -12,7 +12,9 @@ body{
  #description{
      text-align:center;
      color: white;
-     font-size: 20px;
+     font-size: 25px;
+     margin-left:400px;
+     margin-right:400px;
  }
  
  #username{
