--- a/app/views/welcome/login.html.erb
+++ b/app/views/welcome/login.html.erb
@@ -1,7 +1,8 @@
 <!--form fields-->
-<h1>Make Your Own Adventure Game</h1>
+<h1>Consequences</h1>
 
-<p id="description">Game description</p>
+<p id="description">Consequences is a short yet intense choose-your-own-adventure game in which you play as a world-weary private detective who must 
+make difficult decisions in order to solve mysteries, alter the course of fate, and perhaps even choose between life and death...</p>
 
 <%= form_for :account do |f| %>
     <p id="username">
