Added hash values into the levels hash 1/2

--- a/app/views/adventures/play.html.erb
+++ b/app/views/adventures/play.html.erb
@@ -11,6 +11,9 @@
       <%= f.label :level %><br>
       <%= f.text_field :level %>
     </p>
+    <p>
+      <%= Level::LEVEL_HASH[:start][:text] %>
+    </p>
   
     <p>Your move: </p>
     <p>
