--- a/app/views/adventures/play.html.erb
+++ b/app/views/adventures/play.html.erb
@@ -5,8 +5,8 @@
 
 <%= form_with(model: [ @adventure, @adventure.levels.build ], local: true) do |f| %>
 
-  <% if Level.exists? == false then %>
-    <p> Your first level </p>
+  <% if @adventure.levels.exists? == false then %>
+    
     <p>
       <%= f.label :level %><br>
       <%= f.text_field :level %>
