Edit Storyline radio buttons

--- a/app/views/adventures/_form.html.erb
+++ b/app/views/adventures/_form.html.erb
@@ -21,11 +21,11 @@
   
   <p>Choose a storyline for your adventure</p>
   <p>
-
-    <%= form.label :storyline, "Storyline 1", :value => 'story1',  :id => 'storyline1'%>
-    <%= form.radio_button :storyline, 'Storyline 1', :checked => "checked" %>
-    <%= form.label :storyline, 'Storyline 2', :value => 'story2', :id => 'storyline2'%>
-    <%= form.radio_button :storyline, 'Storyline 2'%>
+    <%= form.radio_button :storyline, 'The Mystery of the ', :checked => "checked" %>
+    <%= form.label :storyline, "The Mystery of the ", :value => 'story1',  :id => 'storyline1'%><br>
+    <%= form.radio_button :storyline, 'More Coming Soon...'%>
+    <%= form.label :storyline, 'More Coming Soon...', :value => 'story2', :id => 'storyline2'%>
+    
     
   </p>
 
