Add if else to play view so the last levels have no radio buttons

--- a/app/views/adventures/play.html.erb
+++ b/app/views/adventures/play.html.erb
@@ -34,17 +34,22 @@
   
     <p>Your move: </p>
     <p>
-    
-      <% Level::LEVEL_HASH[:"#{Level.last.pointer}"][:user_choices].each do |text, point| %>
-
-        <%= f.radio_button :user_choice, text, :checked => "checked" %>
-        <%= f.radio_button :pointer, point,  :checked => "checked" %>
-        <%= f.label :user_choice, text %><br>
-        
-      <% end %>
+      <% if Level::LEVEL_HASH[:"#{Level.last.pointer}"] != ('congratulations' || 'game over') then %>
       
-      <%= f.text_field :level, :value => Level::LEVEL_HASH[:"#{Level.last.pointer}"][:text], :type => "hidden" %>
-    </p>
+      
+        <% Level::LEVEL_HASH[:"#{Level.last.pointer}"][:user_choices].each do |text, point| %>
+
+          <%= f.radio_button :user_choice, text, :checked => "checked" %>
+          <%= f.radio_button :pointer, point,  :checked => "checked" %>
+          <%= f.label :user_choice, text %><br>
+        
+        <% end %>
+      
+        <%= f.text_field :level, :value => Level::LEVEL_HASH[:"#{Level.last.pointer}"][:text], :type => "hidden" %>
+      </p>
+      <% else %>
+      
+      <% end %>
     
     <p>
       <%= f.submit "Enter" %>
