Added id to form

--- a/app/views/adventures/_form.html.erb
+++ b/app/views/adventures/_form.html.erb
@@ -14,7 +14,7 @@
     </div>
   <% end %>
 
-  <p>
+  <p id="name">
     <%= form.label :name %><br>
     <%= form.text_field :name, :id => 'name' %>
   </p>
