--- a/app/views/adventures/index.html.erb
+++ b/app/views/adventures/index.html.erb
@@ -2,7 +2,7 @@
 
 
 
-<table bgcolor="darkgray" align="center" width="400">
+<table bgcolor="darkgray" align="center" width="400" id="advtable">
   <tr>
     <th>Name</th>
   </tr>
