Fixed error with final levels in play view

--- a/app/views/adventures/_form.html.erb
+++ b/app/views/adventures/_form.html.erb
@@ -21,8 +21,8 @@
   
   <p>Choose a storyline for your adventure</p>
   <p>
-    <%= form.radio_button :storyline, 'The Mystery of the ', :checked => "checked" %>
-    <%= form.label :storyline, "The Mystery of the ", :value => 'story1',  :id => 'storyline1'%><br>
+    <%= form.radio_button :storyline, 'The Mystery of the Shadow Thief', :checked => "checked" %>
+    <%= form.label :storyline, "The Mystery of the Shadow Thief", :value => 'story1',  :id => 'storyline1'%><br>
     <%= form.radio_button :storyline, 'More Coming Soon...'%>
     <%= form.label :storyline, 'More Coming Soon...', :value => 'story2', :id => 'storyline2'%>
     
